2004-04-07  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: fix dumpinfo to give Source(N) field, not (renamed) tarball filename.

2004-04-07  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Implemented 'fink dumpinfo'

2004-03-30  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: Recognize darwin 7.3.0.

2004-03-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Be careful about permissions when creating directories

2004-03-28  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: When extracting tarballs, do not preserve
	permissions or ownership.

2004-03-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: handle SplitOff(N) in numerical order.

2004-03-23  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: %ni and %Ni instead of %in and %IN.

2004-03-23  Daniel Macks  <dmacks@netspace.org>

	* Package.pm: always expand_percent invariant portion of Package.
	* PkgVersion.pm: %in is invariant portion of Package, %IN is
	invariant portion of parent Package; %n reverted to whole Package.

2004-03-23  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: get_custom_mirror() now takes $suffix param.

2004-03-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Allow non-consecutive SourceN (and related
	fields). Renamed get_param_with_expansion => param_expanded to
	fit naming convention, and added param_default_expanded.
	Distinguishing between SourceN fields is now done by suffix,
	using get_source_suffices().
	* Engine.pm: Modified to use suffix-indexed SourceN.

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Forgot to include SplitOff (i.e., N=[null]).

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fixed regex error in params_matching for SplitOffN.

2004-03-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: %p/src isn't reliable (FetchAltDir and Buildpath
	in fink.conf), so warn if it's used.

2004-03-18  Daniel Macks  <dmacks@netspace.org>
