@@ -1,5 +1,10 @@
 2004-04-07  Daniel Macks  <dmacks@netspace.org>
 
+	* Validation.pm: Correctly expand %type_ for single-subtype
+	types. For all multi-subtype types, use the single subtype ".".
+
+2004-04-07  Daniel Macks  <dmacks@netspace.org>
+
 	* Engine.pm: fix dumpinfo to give Source(N) field, not (renamed) tarball filename.
 
 2004-04-07  Daniel Macks  <dmacks@netspace.org>
